crates/apollo-compiler/test_data/diagnostics/0100_union_extensions.txt
Error: duplicate definitions for the `WithFieldA` member of union type `DuplicateMembers`
    ╭─[0100_union_extensions.graphql:12:33]
    │
 11 │ union DuplicateMembers = WithFieldA
    │                          ─────┬────  
    │                               ╰────── previous definition of `WithFieldA` here
 12 │ extend union DuplicateMembers = WithFieldA | WithFieldB
    │                                 ─────┬────  
    │                                      ╰────── `WithFieldA` redefined here
────╯
Error: `ThisIsAScalar` field must return an object type
   ╭─[0100_union_extensions.graphql:8:30]
   │
 8 │ extend union NonObjectType = ThisIsAScalar
   │                              ──────┬──────  
   │                                    ╰──────── This is a a scalar
   │ 
   │ Help: Union members must be of base Object Type.
───╯
Error: non-repeatable directive nonRepeatable can only be used once per location
    ╭─[0100_union_extensions.graphql:17:33]
    │
 16 │ union DuplicateDirective @nonRepeatable = WithFieldA
    │                          ───────┬──────  
    │                                 ╰──────── directive nonRepeatable first called here
 17 │ extend union DuplicateDirective @nonRepeatable = WithFieldB
    │                                 ───────┬──────  
    │                                        ╰──────── directive nonRepeatable called again here
────╯

